Ctrl-C works again when there is text selected in Amarok.

Amarok now checks if the clipboard content is owned by Amarok itself.
In this case Ctrl-C will work just like expected, copying the selection
to the clipboard. If it's not owned by Amarok, the currently playing
artist and album is copied to the clipboard.

BACKPORT
BUG: 323644
CCBUG: 228872